# emptydemo

./: CMakeLists.txt  Precompute.cpp  Precompute.h  README.txt  basicSockets.cpp  basicSockets.h  connect.cpp  connect.h  globals.h  main.cpp  myFunctionalities.cpp  myFunctionalities.h  secondary.cpp  secondary.h  test.cpp  test.h  tools.cpp  tools.h
